Fixed sticky 1px bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -368,12 +368,13 @@ body {
 
 .navbar {
     position: sticky;
+    position: -webkit-sticky;
     display: flex;
     align-items: center;
     justify-content: center;
     height: $navbarHeight;
     width: 100%;
-    top: 0;
+    top: -1px;
     background-color: rgb(44, 44, 44);
 
     .icon {
