Lock orientation Test

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,13 @@
-// #######################################
+// ###################################################
 //      FONTS
-// #######################################
+// ###################################################
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap");
 
-// #######################################
+// ###################################################
 //      VARIABLES
-// #######################################
+// ###################################################
 
 $background: rgb(245, 245, 245);
 $text: rgba(0, 0, 0, 0.7);
@@ -24,9 +24,9 @@ $navbarHeight: 5rem;
 $collapseNavbarWidth: 1100px;
 $navbarButtonHeight: 2.8rem;
 
-// #######################################
+// ###################################################
 //      MIXINS
-// #######################################
+// ###################################################
 
 @mixin transition($x...) {
     -webkit-transition: $x;
@@ -128,9 +128,9 @@ $navbarButtonHeight: 2.8rem;
     }
 }
 
-// #######################################
+// ###################################################
 //      MAIN ELEMENTS
-// #######################################
+// ###################################################
 
 * {
     overflow: hidden;
@@ -193,9 +193,9 @@ body {
     border: 0;
 }
 
-// #######################################
+// ###################################################
 //      APP
-// #######################################
+// ###################################################
 
 .app {
     position: relative;
@@ -208,15 +208,15 @@ body {
     }
 }
 
-// ##############################################################################
-// ##############################################################################
+// ################################################################################
+// ################################################################################
 //      PAGES
-// ##############################################################################
-// ##############################################################################
+// ################################################################################
+// ################################################################################
 
-// #######################################
+// ###################################################
 //      LANDING
-// #######################################
+// ###################################################
 
 .landing {
     pointer-events: none;
@@ -271,9 +271,9 @@ body {
     }
 }
 
-// #######################################
+// ###################################################
 //      PRODUCT DESIGN
-// #######################################
+// ###################################################
 
 .productDesign {
     height: 500%;
@@ -281,15 +281,15 @@ body {
     // background-color: rgba(255, 0, 0, 0.657);
 }
 
-// ##############################################################################
-// ##############################################################################
+// ################################################################################
+// ################################################################################
 //      COMPONENTS
-// ##############################################################################
-// ##############################################################################
+// ################################################################################
+// ################################################################################
 
-// #######################################
+// ###################################################
 //      CURSOR
-// #######################################
+// ###################################################
 
 .cursor {
     pointer-events: none;
@@ -365,9 +365,9 @@ body {
     }
 }
 
-// #######################################
+// ###################################################
 //      NAVBAR
-// #######################################
+// ###################################################
 
 .navbar {
     position: sticky;
@@ -574,9 +574,9 @@ body {
     }
 }
 
-// #######################################
+// ###################################################
 //      SPLASH SCREEN
-// #######################################
+// ###################################################
 
 .splashScreen {
     position: sticky;
@@ -611,9 +611,9 @@ body {
     }
 }
 
-// #######################################
+// ###################################################
 //      GLASS
-// #######################################
+// ###################################################
 
 .glass {
     background: radial-gradient(circle, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.1) 75%);
@@ -628,9 +628,9 @@ body {
     }
 }
 
-// #######################################
+// ###################################################
 //      BACKGROUND
-// #######################################
+// ###################################################
 
 .background {
     pointer-events: none;
